src/index.css
@import url("https://fonts.googleapis.com/css2?family=Monoton&family=Quicksand:wght@500;700&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
}

body {
  font-size: 2.4rem;
  font-family: sans-serif;
  color: #5a3e2b;
  font-family: "Quicksand";
  font-weight: 500;
}

.app {
  width: 100%;
  height: 100vh;
  display: grid;
  grid-template-rows: auto auto 1fr auto;
}

svg {
  color: #dee2c9;
  height: 80px;
}

h1 {
  text-align: center;
  color: #31572c;
  background-color: #c6ca8f;
  font-family: "Monoton";
  font-size: 8rem;
  text-transform: uppercase;
  font-weight: 400;
  word-spacing: 30px;
  letter-spacing: -5px;
  padding: 2.4rem 2rem;
}

.add-form {
  color: #fff;
  background-color: #4f772d;
  padding: 2.8rem 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 2rem;
}

.form-selection {
  display: flex;
  gap: 1rem;
}

h3 {
  margin-right: 1.6rem;
  font-size: 2.4rem;
}

button,
select,
input {
  background-color: #ecf39e;
  color: #5a3e2b;
  font-family: inherit;
  border: none;
  border-radius: 10rem;
  padding: 1.2rem 3.2rem;
  font-weight: 700;
  font-size: 1.8rem;
  cursor: pointer;
}

.add-form button {
  /* color: #fff; */
  text-transform: uppercase;
  background-color: #95cf95;
}

.list {
  background-color: #dee2c9;
  color: #132a13;
  padding: 4rem 2rem;

  display: flex;
  justify-content: space-between;
  flex-direction: column;
  gap: 3.2rem;
  align-items: center;
}

@media (max-width: 500px) {
  .list {
    height: 60vh;
  }
}

@media (max-width: 320px) {
  .list {
    height: 85vh;
  }
}

.actions button,
.list select {
  text-transform: uppercase;
  padding: 0.8rem 2.4rem;
  font-size: 1.4rem;
  font-weight: 700;
  margin: 0 0.8rem;
}

.list ul {
  list-style: none;
  width: 80%;
  overflow: scroll;

  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  gap: 1.2rem;
  justify-content: center;
  align-content: start;
}

.list li {
  display: flex;
  align-items: center;
  gap: 1.2rem;
}

input[type="checkbox"] {
  height: 2rem;
  width: 2rem;
  accent-color: #132a13;
}

.list li button {
  cursor: pointer;
  background: none;
  border: none;
  font-size: 1.8rem;
  padding: 0.8rem;
  transform: translateY(2px);
}

.btn-clear {
  background-color: #ff9c95;
}

.stats {
  color: #fff;
  background-color: #31572c;
  text-align: center;
  font-weight: 700;
  padding: 3.2rem 2rem;
}

.box::-webkit-scrollbar,
.list::-webkit-scrollbar {
  display: none;
  scroll-behavior: smooth;
}

